log
Thu 20 Apr 2023 05:20:58 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:56:17: error: ‘mapa’ is used uninitialized [-Werror=uninitialized]
   56 |   mapa->buckets = NULL;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
1201a56
Thu 20 Apr 2023 05:21:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f1da755
Thu 20 Apr 2023 05:26:14 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:56:7: error: ‘*mapa.buckets’ is used uninitialized [-Werror=uninitialized]
   56 |   mapa->buckets[capacity]->key = NULL;
      |   ~~~~^~~~~~~~~
hashmap.c:57:7: error: ‘*mapa.buckets’ is used uninitialized [-Werror=uninitialized]
   57 |   mapa->buckets[capacity]->value = NULL;
      |   ~~~~^~~~~~~~~
hashmap.c:56:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   56 |   mapa->buckets[capacity]->key = NULL;
      |       ^~
hashmap.c:55:32: note: referencing an object of size 8 allocated by ‘malloc’
   55 |   HashMap * mapa = (HashMap *) malloc (sizeof(HashMap *));
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~
hashmap.c:58:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   58 |   mapa->capacity = capacity;
      |       ^~
hashmap.c:55:32: note: referencing an object of size 8 allocated by ‘malloc’
   55 |   HashMap * mapa = (HashMap *) malloc (sizeof(HashMap *));
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~
hashmap.c:59:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   59 |   mapa->size = 0;
      |       ^~
hashmap.c:55:32: note: referencing an object of size 8 allocated by ‘malloc’
   55 |   HashMap * mapa = (HashMap *) malloc (sizeof(HashMap *));
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~
hashmap.c:60:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   60 |   mapa->current = -1;
      |       ^~
hashmap.c:55:32: note: referencing an object of size 8 allocated by ‘malloc’
   55 |   HashMap * mapa = (HashMap *) malloc (sizeof(HashMap *));
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ecea935
Thu 20 Apr 2023 05:28:10 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:56:7: error: ‘*mapa.buckets’ is used uninitialized [-Werror=uninitialized]
   56 |   mapa->buckets[capacity] = (Pair *) malloc (sizeof(Pair *));
      |   ~~~~^~~~~~~~~
hashmap.c:57:7: error: ‘*mapa.buckets’ is used uninitialized [-Werror=uninitialized]
   57 |   mapa->buckets[capacity]->key = NULL;
      |   ~~~~^~~~~~~~~
hashmap.c:58:7: error: ‘*mapa.buckets’ is used uninitialized [-Werror=uninitialized]
   58 |   mapa->buckets[capacity]->value = NULL;
      |   ~~~~^~~~~~~~~
hashmap.c:56:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   56 |   mapa->buckets[capacity] = (Pair *) malloc (sizeof(Pair *));
      |       ^~
hashmap.c:55:32: note: referencing an object of size 8 allocated by ‘malloc’
   55 |   HashMap * mapa = (HashMap *) malloc (sizeof(HashMap *));
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~
hashmap.c:59:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   59 |   mapa->capacity = capacity;
      |       ^~
hashmap.c:55:32: note: referencing an object of size 8 allocated by ‘malloc’
   55 |   HashMap * mapa = (HashMap *) malloc (sizeof(HashMap *));
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~
hashmap.c:60:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   60 |   mapa->size = 0;
      |       ^~
hashmap.c:55:32: note: referencing an object of size 8 allocated by ‘malloc’
   55 |   HashMap * mapa = (HashMap *) malloc (sizeof(HashMap *));
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~
hashmap.c:61:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   61 |   mapa->current = -1;
      |       ^~
hashmap.c:55:32: note: referencing an object of size 8 allocated by ‘malloc’
   55 |   HashMap * mapa = (HashMap *) malloc (sizeof(HashMap *));
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dc7d391
Thu 20 Apr 2023 05:31:56 PM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   56 |   mapa->buckets = (Pair **) malloc ((sizeof(Pair **)* capacity));
      |       ^~
hashmap.c:55:32: note: referencing an object of size 8 allocated by ‘malloc’
   55 |   HashMap * mapa = (HashMap *) malloc (sizeof(HashMap *));
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~
hashmap.c:58:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   58 |   mapa->capacity = capacity;
      |       ^~
hashmap.c:55:32: note: referencing an object of size 8 allocated by ‘malloc’
   55 |   HashMap * mapa = (HashMap *) malloc (sizeof(HashMap *));
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~
hashmap.c:59:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   59 |   mapa->size = 0;
      |       ^~
hashmap.c:55:32: note: referencing an object of size 8 allocated by ‘malloc’
   55 |   HashMap * mapa = (HashMap *) malloc (sizeof(HashMap *));
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~
hashmap.c:60:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   60 |   mapa->current = -1;
      |       ^~
hashmap.c:55:32: note: referencing an object of size 8 allocated by ‘malloc’
   55 |   HashMap * mapa = (HashMap *) malloc (sizeof(HashMap *));
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bcc358f
